--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.2",
+    "apexcharts": "^3.40.0",
     "autoprefixer": "^9",
     "postcss": "^8",
     "react": "^17.0.2",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.11.1",
     "react-scripts": "4.0.3",
